--- a/eda_and _model_training.ipynb
+++ b/eda_and _model_training.ipynb
@@ -4060,7 +4060,7 @@
       },
       "outputs": [],
       "source": [
-        "path = \"/gdrive/MyDrive/VIT/SEM-6/xgb_final.pkl\"\n",
+        "path = \"xgb_final.pkl\"\n",
         "with open(path, 'wb') as f:\n",
         "  pickle.dump(xgb_classifier_skf,f)"
       ]
