--- a/Model building/Model_training.ipynb
+++ b/Model building/Model_training.ipynb
@@ -798,7 +798,7 @@
       "outputs": [],
       "source": [
         "import pickle\n",
-        "path = \"prediction_model2.pkl\"\n",
+        "path = \"prediction_model.pkl\"\n",
         "with open(path, 'wb') as f:\n",
         "    pickle.dump(best_rf,f)"
       ]
